fixed 2 layout issues on mobile views

--- a/less/custom.less
+++ b/less/custom.less
@@ -109,7 +109,7 @@
     // this is for IE11
     @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
       justify-content: space-around;
-      }
+    }
   }
 
   ul {
@@ -222,10 +222,6 @@
     .eclipsefdn-user-bios-picture {
       padding-right: 0;
     }
-
-    .eclipsefdn-user-bios-info {
-      padding: 0;
-    }
   }
 
   .container {
@@ -242,7 +238,7 @@
     flex-direction: column;
   }
 
-  .sponsor-text{
+  .sponsor-text {
     position: relative;
     top: 26px;
     color: @white;
@@ -255,7 +251,7 @@
 
 #back-to-top {
   position: relative;
-  bottom: 146px;
+  bottom: 186px;
 }
 
 footer#solstice-footer {
